--- a/src/styles/components/sidebar.css
+++ b/src/styles/components/sidebar.css
@@ -15,8 +15,8 @@
 }
 
 .sidebar__nav {
-	display: flex;
-	flex-direction: column;
+	display: grid;
+	grid-template-rows: auto 1fr auto;
 	height: 100%;
 }
 
@@ -43,8 +43,8 @@
 .sidebar__list {
 	@apply p-2;
 	list-style: none;
-	margin: 0 0 auto 0;
-	flex: 1;
+	overflow-y: auto;
+	min-height: 0;
 }
 
 .sidebar__item {
